--- a/index.html
+++ b/index.html
@@ -2,11 +2,95 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Глэйси: магазин мороженого</title>
   </head>
   <body>
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="#" alt="Логотип Глэйси">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="#">Доставка и оплата</a></li>
+          <li><a href="#">О Компании</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li class="search">Поиск</li>
+          <li class="login">Вход</li>
+          <li class="basket">Корзина</li>
+        </ul>
+      </nav>
+      <p class="header-info">
+        <span class="opening-hours">С 10 до 20, ежедневно</span>
+        <a class="phone-number" href="#">8 812 450-25-25</a>
+      </p>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Интернет-магазин мороженого Глэйси</h1>
+      <section class="slider">
+        <h2 class="visually-hidden">Слайдер</h2>
+      <!-- Здесь будет находиться слайдер -->
+      </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+      <section class="promotions">
+        <h2 class="visually-hidden">Промо акции</h2>
+      <!-- Здесь будут находиться акции -->
+      </section>
 
+      <section class="bestsellers">
+        <h2 class="visually-hidden">Хиты продаж</h2>
+      <!-- Здесь будут находиться хиты продаж -->
+      </section>
+
+      <section class="features">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <p class="features-lead">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
+        <ul class="features-list">
+          <li class="features-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+          <li class="features-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+          <li class="features-item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+          <li class="features-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+        </ul>
+      </section>
+
+      <article class="blog">
+        <h2>Новое в нашем блоге</h2>
+        <a class="article-topic" href="#">10 способов сервировки фруктовых щербетов к столу</a>
+      </article>
+
+      <section class="subscription">
+        <h2 class="visually-hidden">Подписка</h2>
+        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+      <!-- Здесь будет находиться форма -->
+      </section>
+
+      <section class="contacts">
+        <h2 class="visually-hidden">Контакты</h2>
+      <!-- Здесь будут контакты и карта -->
+      </section>
+    </main>
+    <footer class="main-footer">
+      <div class="social-networks">
+        <ul>
+          <li><a class="social-button social-button-tw" href="#">Твиттер</a></li>
+          <li><a class="social-button social-button-inst" href="#">Инстаграм</a></li>
+          <li><a class="social-button social-button-fb" href="#">Фейсбук</a></li>
+          <li><a class="social-button social-button-vk" href="#">Вконтакте</a></li>
+        </ul>
+      </div>
+      <div class="additional-info">
+        <ul>
+          <li class="additional-info-chosen"><a href="#">Для поставщиков</a></li>
+          <li><a href="#">О производстве</a></li>
+          <li><a href="#">Наши документы</a></li>
+          <li><a href="#">Экологические стандарты</a></li>
+        </ul>
+      </div>
+      <p class="footer-copyright">
+        <a class="htmlacademy-logo"  href="https://htmlacademy.ru/intensive/htmlcss"><img src="#" alt="Логотип HTML Academy"></a>
+        <span>Сделано в <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2019</span>
+      </p>
+    </footer>
   </body>
 </html>
