Правки к "3. Основное задание: начинаем разметку личного проекта"

--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
       </nav>
       <p class="header-info">
         <span class="opening-hours">С 10 до 20, ежедневно</span>
-        <a class="phone-number" href="#">8 812 450-25-25</a>
+        <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
       </p>
     </header>
     <main>
