--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="#" alt="Логотип Глэйси">
-        </a>
+        <img src="#" alt="Логотип Глэйси">
         <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="#">Доставка и оплата</a></li>
@@ -23,7 +21,7 @@
       </nav>
       <p class="header-info">
         <span class="opening-hours">С 10 до 20, ежедневно</span>
-        <a class="phone-number" href="#">8 812 450-25-25</a>
+        <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
       </p>
     </header>
     <main>
