--- a/catalog.html
+++ b/catalog.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="main-navigation">
+      <nav class="main-navigation" aria-label="Навигация по сайту">
         <a class="main-header-logo">
-          <img src="#" alt="Логотип Глэйси">
+          <img src="img/logo.svg" width="154" height="64" alt="Логотип Глэйси">
         </a>
         <ul class="site-navigation">
           <li  class="site-navigation-current"><a href="catalog.html">Каталог</a></li>
@@ -16,9 +16,15 @@
           <li><a href="#">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
-          <li class="search">Поиск</li>
-          <li class="login">Вход</li>
-          <li class="basket">Корзина</li>
+          <li class="search">
+            <a href="#"><img src="img/loupe.svg" width="17" height="17" alt="Поиск"></a>
+          </li>
+          <li class="login">
+            <a href=""><img src="img/entrance.svg" width="21" height="19" alt="#">Вход</a>
+          </li>
+          <li class="basket">
+            <a href=""><img src="img/basket-red.svg" width="21" height="20" alt="#">Корзина</a>
+          </li>
         </ul>
       </nav>
       <p class="header-info">
@@ -45,7 +51,7 @@
             <p class="catalog-item-price">
               <span class="price">310 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
+              <a href="#"><img src="img/product-1.png" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -53,7 +59,7 @@
             <p class="catalog-item-price">
               <span class="price">380 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочно-кофейное с кусочками шоколада"></a>
+              <a href="#"><img src="img/product-2.png" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -61,7 +67,7 @@
             <p class="catalog-item-price">
               <span class="price">355 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
+              <a href="#"><img src="img/product-3.png" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -69,7 +75,7 @@
             <p class="catalog-item-price">
               <span class="price">415 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочное крем-брюле с карамельной подливкой"></a>
+              <a href="#"><img src="img/product-4.png" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -77,7 +83,7 @@
             <p class="catalog-item-price">
               <span class="price">325 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочное с брусничным джемом"></a>
+              <a href="#"><img src="img/product-5.png" width="267" height="267" alt="Сливочное с брусничным джемом"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -85,7 +91,7 @@
             <p class="catalog-item-price">
               <span class="price">410 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочно-черничное с цельными ягодами черники"></a>
+              <a href="#"><img src="img/product-6.png" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -93,7 +99,7 @@
             <p class="catalog-item-price">
               <span class="price">375 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочно-лимонное с карамельной присыпкой"></a>
+              <a href="#"><img src="img/product-7.png" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -101,7 +107,7 @@
             </h3><p class="catalog-item-price">
               <span class="price">320 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочное с шоколадной стружкой"></a>
+              <a href="#"><img src="img/product-8.png" width="267" height="267" alt="Сливочное с шоколадной стружкой"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -109,7 +115,7 @@
             <p class="catalog-item-price">
               <span class="price">440 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочно-ванильное с кусочками шоколада"></a>
+              <a href="#"><img src="img/product-9.png" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -117,7 +123,7 @@
             <p class="catalog-item-price">
               <span class="price">435 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочноe с ментоловым сиропом"></a>
+              <a href="#"><img src="img/product-10.png" width="267" height="267" alt="Сливочноe с ментоловым сиропом"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -125,7 +131,7 @@
             <p class="catalog-item-price">
               <span class="price">355 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочное с кусочками черного шоколада"></a>
+              <a href="#"><img src="img/product-11.png" width="267" height="267" alt="Сливочное с кусочками черного шоколада"></a>
             </p>
           </li>
           <li class="catalog-item">
@@ -133,7 +139,7 @@
             <p class="catalog-item-price">
               <span class="price">420 ₽</span>
               <span class="weight">/кг</span>
-              <a href="#"><img src="#" alt="Сливочное с мятным сиропом"></a>
+              <a href="#"><img src="img/product-12.png" width="267" height="267" alt="Сливочное с мятным сиропом"></a>
             </p>
           </li>
         </ul>
@@ -143,22 +149,42 @@
     <footer class="main-footer">
       <div class="social-networks">
         <ul>
-          <li><a class="social-button social-button-tw" href="#">Твиттер</a></li>
-          <li><a class="social-button social-button-inst" href="#">Инстаграм</a></li>
-          <li><a class="social-button social-button-fb" href="#">Фейсбук</a></li>
-          <li><a class="social-button social-button-vk" href="#">Вконтакте</a></li>
+          <li>
+            <a class="social-button social-button-tw" href="#" aria-label="Ссылка на Twitter">
+              <img src="img/twitter.svg" width="32" height="32" alt="Twitter">
+            </a>
+          </li>
+          <li>
+            <a class="social-button social-button-inst" href="#" aria-label="Ссылка на Instagram">
+              <img src="img/instagram.svg" width="32" height="32" alt="Instagram">
+            </a>
+          </li>
+          <li>
+            <a class="social-button social-button-fb" href="#" aria-label="Ссылка на страницу Facebook">
+              <img src="img/fb.svg" width="32" height="32" alt="Facebook">
+            </a>
+          </li>
+          <li>
+            <a class="social-button social-button-vk" href="#" aria-label="Ссылка на группу Вконтакте">
+              <img src="img/vk.svg" width="32" height="32" alt="Вконтакте">
+            </a>
+          </li>
         </ul>
       </div>
       <div class="additional-info">
         <ul>
-          <li class="additional-info-chosen"><a href="#">Для поставщиков</a></li>
+          <li class="additional-info-chosen">
+            <a href="#"><img src="img/heart.svg" width="15" height="13" alt="#">Для поставщиков</a>
+          </li>
           <li><a href="#">О производстве</a></li>
           <li><a href="#">Наши документы</a></li>
           <li><a href="#">Экологические стандарты</a></li>
         </ul>
       </div>
       <p class="footer-copyright">
-        <a class="htmlacademy-logo"  href="https://htmlacademy.ru/intensive/htmlcss"><img src="#" alt="Логотип HTML Academy"></a>
+        <a class="htmlacademy-logo"  href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
+        </a>
         <span>Сделано в <a class="button" href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> &#169; 2019</span>
       </p>
     </footer>
